--- a/Homework 1 week/Homework 2 week/pom.xml
+++ b/Homework 1 week/Homework 2 week/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Homework_2_week</artifactId>
+    <artifactId>Homework 2 week</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
